Making the guide two rows.

--- a/themes/gdd/layouts/index.html
+++ b/themes/gdd/layouts/index.html
@@ -5,14 +5,21 @@
           <h1>{{ .Site.Title }}</h1>
         </div>
         <h3>Help us gather accurate data on the state of equitable representation in the games industry.</h3>
-        <div class="outer true">
-          <img class="internal" src="/dataicons/lots.png"><div class="internal"><h4>: Lots of data</h4></div>
+        <div class="guide">
+            <div class="outer true">
+            <img class="internal" src="/dataicons/lots.png"><div class="internal"><h4>: Lots of data</h4></div>
+            </div>
+            <div class="outer some">
+            <img class="internal" src="/dataicons/some.png"><div class="internal"><h4>: Some data</h4></div>
+            </div>
         </div>
-        <div class="outer some">
-          <img class="internal" src="/dataicons/some.png"><div class="internal"><h4>: Some data</h4></div>
-        </div>
-        <div class="outer false">
-          <img class="internal" src="/dataicons/none.png"><div class="internal"><h4>: No data</h4></div>
+        <div class="guide">
+            <div class="outer false">
+            <img class="internal" src="/dataicons/none.png"><div class="internal"><h4>: No category data</h4></div>
+            </div>
+            <div class="outer false">
+            <img class="internal" src="/dataicons/no.png"><div class="internal"><h4>: No data at all</h4></div>
+            </div>
         </div>
         <br>
       </div>
