Adding the footer, changing the fonts, making things look prettier.

--- a/themes/gdd/layouts/index.html
+++ b/themes/gdd/layouts/index.html
@@ -4,7 +4,7 @@
         <div class="title">
           <h1>{{ .Site.Title }}</h1>
         </div>
-        <h3>Help us gather accurate data on the state of equitable representation in the games industry.</h3>
+        <p>Help us gather accurate data on the state of equitable representation in the games industry.</p>
         <div class="guide">
             <div class="outer true">
             <img class="internal" src="/dataicons/lots.png"><div class="internal"><h4>: Lots of data</h4></div>
