--- a/themes/gdd/layouts/partials/footer.html
+++ b/themes/gdd/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <div>
-        Thank you to <a href="https://github.com/doubleunion/opendiversitydata">OpenDiversityData</a> for the fantastic basis of this site.
+        Thank you to <a href="https://github.com/doubleunion/opendiversitydata">OpenDiversityData</a> for the fantastic idea for this site.
     </div>
 </footer>
