Fixing spacing on the table in internet explorer and slightly on other browsers.

--- a/themes/gdd/layouts/index.html
+++ b/themes/gdd/layouts/index.html
@@ -23,13 +23,13 @@
         <table class="table">
           <thead>
             <tr>
-              <th class="th_first"><h2>Company</h2></th>
-              <th class="th_rest">Gender</th>
-              <th class="th_rest">Ethnicity</th>
-              <th class="th_rest">LGBTQ+</th>
-              <th class="th_rest">Disability</th>
-              <th class="th_rest">Age</th>
-              <th class="th_rest">Data</th>
+              <th><div class="th_first">Company</div></th>
+              <th><div class="th_rest">Gender</div></th>
+              <th><div class="th_rest">Ethnicity</div></th>
+              <th><div class="th_rest">LGBTQ+</div></th>
+              <th><div class="th_rest">Disability</div></th>
+              <th><div class="th_rest">Age</div></th>
+              <th><div class="th_rest">Data</div></th>
             </tr>
           </thead>
           <tbody>
