Formatting the top paragraphs to left aligned and centering a bit more.

--- a/themes/gdd/static/css/style.css
+++ b/themes/gdd/static/css/style.css
@@ -32,6 +32,16 @@ body, html {
 	text-align: center;
 }
 
+.headertext {
+	text-align: center;
+	padding-left: 40px;
+	padding-right: 35px;
+}
+
+.headertext p {
+	text-align: left;
+}
+
 .title {
 	font-size: 30px;
 }
