--- a/themes/gdd/layouts/index.html
+++ b/themes/gdd/layouts/index.html
@@ -4,9 +4,11 @@
         <div class="title">
           <h2>{{ .Site.Title }}</h2>
         </div>
-        <p>Our goal is to help game companies to release their diversity information so we can have a conversation about the state of equitable representation in the games industry. Without data, we don't know where we are or how far we have to go.</p>
-        <p>Know a company that has released their diversity information or something on here is wrong? Please submit a <a href="https://github.com/austinkelmore/gamedevdiversity">pull request</a>.
-        <p>Need help releasing your diversity information? Please e-mail <a href="mailto:gamedevdiversity@gmail.com">gamedevdiversity@gmail.com</a>, and we can help you out.</p>
+        <div class="headertext">
+          <p>Our goal is to help game companies to release their diversity information so we can have a conversation about the state of equitable representation in the games industry. Without data, we don't know where we are or how far we have to go.</p>
+          <p>Know a company that has released their diversity information or something on here is wrong? Please submit a <a href="https://github.com/austinkelmore/gamedevdiversity">pull request</a>.</p>
+          <p>Need help releasing your diversity information? Please e-mail <a href="mailto:gamedevdiversity@gmail.com">gamedevdiversity@gmail.com</a>, and we can help you out.</p>
+        </div>
         <div class="guide">
             <div class="outer true">
             <img class="internal" src="/dataicons/lots.png"><div class="internal"><h4>: Lots of data</h4></div>
