Specifying video game industry at the top.

--- a/themes/gdd/layouts/index.html
+++ b/themes/gdd/layouts/index.html
@@ -5,7 +5,7 @@
           <h2>{{ .Site.Title }}</h2>
         </div>
         <div class="headertext">
-          <p>Our goal is to help game companies to release their diversity information so we can have a conversation about the state of equitable representation in the games industry. Without data, we don't know where we are or how far we have to go.</p>
+          <p>Our goal is to help game companies to release their diversity information so we can have a conversation about the state of equitable representation in the video game industry. Without data, we don't know where we are or how far we have to go.</p>
           <p>Know a company that has released their diversity information or something on here is wrong? Please submit a <a href="https://github.com/austinkelmore/gamedevdiversity">pull request</a>.</p>
           <p>Need help releasing your diversity information? <a href="http://projectinclude.org/measuring_progress">Project Include</a> has some great information or you can e-mail <a href="mailto:gamedevdiversity@gmail.com">gamedevdiversity@gmail.com</a>, and we can help you out.</p>
         </div>
