Updating language for opendiversitydata thanks.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <div>
-        Thank you to <a href="http://opendiversitydata.org/">OpenDiversityData</a> for the fantastic idea for this site.
+        Thank you <a href="http://opendiversitydata.org/">OpenDiversityData</a> for the inspiration for this site.
     </div>
 </footer>
