--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,16 +8,9 @@
   </head>
   <link rel="stylesheet" href="/css/style.css">
   <body>
-    <!-- Code that all your templates share, like a header -->
-   
-    {{ partial "header.html" . }}
-
-    {{ block "main" . }}
-      <!-- The part of the page that begins to differ between templates -->
-    {{ end }}
-
-    <!-- More shared code, perhaps a footer -->
-
-    {{ partial "footer.html" . }}
+    {{- partial "header.html" . -}}
+    {{- block "main" . -}}
+    {{- end -}}
+    {{- partial "footer.html" . -}}
   </body>
 </html>
